--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,10 @@ spring:
     name: parking-meter
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/meter
+    url: jdbc:mysql://localhost:3306/meter
     username: user
     password: secret
+
+  exposed:
+    show-sql: true
+    generate-ddl: true
