--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,10 @@ spring:
   exposed:
     show-sql: true
     generate-ddl: true
+
+  data:
+    redis:
+      client-type: lettuce
+      host: localhost
+      port: 6379
+      database: 0
